manifest/trackingdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking
  namespace: tracking
  labels:
    app: tracking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tracking
  template:
    metadata:
      labels:
        app: tracking
    spec:
      containers:
      - name: tracking
        image: vapprtech/tracking:latest
        imagePullPolicy: Always
        ports:
        - name: https
          containerPort: 3000
