manifest/trackingservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracking
  namespace: arrivnow
  labels:
    app: tracking
spec:
  ports:
  - name: https
    port: 3000
    targetPort: 3000
  selector:
    app: tracking
