manifest/trackingingress.yaml
#apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: tracking
  name: tracking-access
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    #alb.ingress.kubernetes.io/certificate-arn: __CERT_ARN__
    #alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    #alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true
    #alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
    #alb.ingress.kubernetes.io/load-balancer-attributes: routing.http.drop_invalid_header_fields.enabled=true

spec:
  rules:
   - host: dev-tracking.vapprtech.com
     http:
        paths:
          - path: /*
            backend:
              serviceName: tracking
              servicePort: 80
